--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -58,6 +58,54 @@ dataSources:
         - event: LogDeploy(indexed address,bytes,indexed address)
           handler: handleLogDeploy
       file: ./src/mappings/core.ts
+  - kind: ethereum
+    name: MagicApeStaking
+    network: mainnet
+    source:
+      address: "0x5954aB967Bc958940b7EB73ee84797Dc8a2AFbb9"
+      abi: MagicApeStaking
+      startBlock: 16119157
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - MagicApe
+      abis:
+        - name: MagicApeStaking
+          file: ./abis/MagicApeStaking.json
+        - name: MagicApe
+          file: ./abis/MagicApe.json
+        - name: Oracle
+          file: ./abis/Oracle.json
+      eventHandlers:
+        - event: ClaimRewards(indexed address,uint256,address)
+          handler: handleLogClaimRewards
+      file: ./src/mappings/magic-ape-staking.ts
+  - kind: ethereum
+    name: MagicApe
+    network: mainnet
+    source:
+      address: "0xf35b31B941D94B249EaDED041DB1b05b7097fEb6"
+      abi: MagicApe
+      startBlock: 16656455
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - MagicApe
+      abis:
+        - name: MagicApe
+          file: ./abis/MagicApe.json
+        - name: Oracle
+          file: ./abis/Oracle.json
+      eventHandlers:
+        - event: Deposit(indexed address,indexed address,uint256,uint256)
+          handler: handleLogDeposit
+        - event: Withdraw(indexed address,indexed address,indexed address,uint256,uint256)
+          handler: handleLogWithdraw
+      file: ./src/mappings/magic-ape.ts
 templates:
   - name: Cauldron
     kind: ethereum/contract
