--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -64,7 +64,7 @@ dataSources:
     source:
       address: "0x5954aB967Bc958940b7EB73ee84797Dc8a2AFbb9"
       abi: MagicApeStaking
-      startBlock: 16119157
+      startBlock: 16525000
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -81,6 +81,8 @@ dataSources:
       eventHandlers:
         - event: ClaimRewards(indexed address,uint256,address)
           handler: handleLogClaimRewards
+        - event: Deposit(indexed address,uint256,address)
+          handler: handleLogDeposit
       file: ./src/mappings/magic-ape-staking.ts
   - kind: ethereum
     name: MagicApe
