--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -2,13 +2,15 @@ specVersion: 0.0.5
 schema:
   file: ./schema.graphql
 dataSources:
+  # 1. BentoBox (if applicable)
+  {{#bentoBox.enable}}
   - kind: ethereum
     name: BentoBox
-    network: mainnet
+    network: {{network}}
     source:
-      address: "0xF5BCE5077908a1b7370B9ae04AdC565EBd643966"
+      address: "{{ bentoBox.address }}"
       abi: BentoBox
-      startBlock: 12094175
+      startBlock: {{ bentoBox.startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -30,13 +32,17 @@ dataSources:
         - event: LogDeploy(indexed address,bytes,indexed address)
           handler: handleLogDeploy
       file: ./src/mappings/core.ts
+  {{/bentoBox.enable}}
+
+  # 2. DegenBox (if applicable)
+  {{#degenBox.enable}}
   - kind: ethereum
     name: DegenBox
-    network: mainnet
+    network: {{network}}
     source:
-      address: "0xd96f48665a1410C0cd669A88898ecA36B9Fc2cce"
+      address: "{{ degenBox.address }}"
       abi: DegenBox
-      startBlock: 13418156
+      startBlock: {{ degenBox.startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -58,13 +64,17 @@ dataSources:
         - event: LogDeploy(indexed address,bytes,indexed address)
           handler: handleLogDeploy
       file: ./src/mappings/core.ts
+  {{/degenBox.enable}}
+
+  # 3. MagicApe (if applicable)
+  {{#magicApe.enable}}
   - kind: ethereum
     name: MagicApeStaking
-    network: mainnet
+    network: {{network}}
     source:
-      address: "0x5954aB967Bc958940b7EB73ee84797Dc8a2AFbb9"
+      address: "{{ magicApe.stakingAddress }}"
       abi: MagicApeStaking
-      startBlock: 16525000
+      startBlock: {{ magicApe.stakingStartBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -86,11 +96,11 @@ dataSources:
       file: ./src/mappings/magic-ape-staking.ts
   - kind: ethereum
     name: MagicApe
-    network: mainnet
+    network: {{network}}
     source:
-      address: "0xf35b31B941D94B249EaDED041DB1b05b7097fEb6"
+      address: "{{ magicApe.address }}"
       abi: MagicApe
-      startBlock: 16656455
+      startBlock: {{ magicApe.startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -108,10 +118,11 @@ dataSources:
         - event: Withdraw(indexed address,indexed address,indexed address,uint256,uint256)
           handler: handleLogWithdraw
       file: ./src/mappings/magic-ape.ts
+  {{/magicApe.enable}}
 templates:
   - name: Cauldron
     kind: ethereum/contract
-    network: mainnet
+    network: {{network}}
     source:
       abi: Cauldron
     mapping:
