update create cauldron

--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -180,5 +180,5 @@ templates:
         - event: LogAccrue(uint128)
           handler: handleLogAccrue
       callHandlers:
-        - event: _borrow(address,uint256)
+        - event: borrow(address,uint256)
         - handler: handleBorrowCall
