--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "test": "graph test",
         "coverage": "graph test -- -c",
         "auth": "graph auth --studio",
-        "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ ${0}"
+        "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/"
     },
     "dependencies": {
         "@graphprotocol/graph-cli": "^0.30.1",
