add beam statistics

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "prepare:bsc": "mustache deployments/bsc.json subgraph.template.yaml > subgraph.yaml",
         "prepare:ethereum": "mustache deployments/ethereum.json subgraph.template.yaml > subgraph.yaml",
         "prepare:fantom": "mustache deployments/fantom.json subgraph.template.yaml > subgraph.yaml",
+        "prepare:kava-evm": "mustache deployments/kava-evm.json subgraph.template.yaml > subgraph.yaml",
+        "prepare:matic": "mustache deployments/matic.json subgraph.template.yaml > subgraph.yaml",
+        "prepare:moonriver": "mustache deployments/moonriver.json subgraph.template.yaml > subgraph.yaml",
         "prepare:optimism": "mustache deployments/optimism.json subgraph.template.yaml > subgraph.yaml",
         "build": "graph build",
         "codegen": "graph codegen",
