move logBorrowCall logic into logBorrowEvent

--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -208,12 +208,10 @@ templates:
           handler: handleLogExchangeRate
         - event: LogAccrue(uint128)
           handler: handleLogAccrue
+      {{#callHandlerSupport}}
       callHandlers:
-        - function: borrow(address,uint256)
-          handler: handleBorrowCall
-        - function: cook(uint8[],uint256[],bytes[])
-          handler: handleCookCall
         - function: liquidate(address[],uint256[],address,address,bytes)
           handler: handleLiquidateCall
         - function: liquidate(address[],uint256[],address,address)
           handler: handleLiquidateCall
+      {{/callHandlerSupport}}
