--- a/subgraphs/cauldrons/package.json
+++ b/subgraphs/cauldrons/package.json
@@ -3,17 +3,19 @@
   "license": "MIT",
   "repository": {
     "url": "Abracadabra-money/abracadabra-subgraph",
-    "directory": "subgraphs/blocks"
+    "directory": "subgraphs/cauldrons"
   },
   "files": [
     "generated"
   ],
   "scripts": {
-    "generate": "pnpm run prepare:yaml && pnpm run codegen",
+    "generate": "pnpm run prepare:yaml && pnpm run prepare:constants && pnpm run codegen",
     "prepare:yaml": "mustache ../../config/$NETWORK.js subgraph.template.yaml > subgraph.yaml",
+    "prepare:constants": "mustache ../../config/$NETWORK.js src/constants/index.template.ts > src/constants/index.ts",
     "build": "graph build",
     "codegen": "graph codegen",
-    "test": "graph test -r"
+    "test": "graph test -r",
+    "deploy:studio": "graph deploy --node https://api.studio.thegraph.com/deploy/"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.53.0",
@@ -22,6 +24,8 @@
   "devDependencies": {
     "matchstick-as": "0.5.0",
     "assemblyscript": "^0.19.20",
-    "wabt": "1.0.24"
+    "wabt": "1.0.24",
+    "abi": "workspace:*",
+    "misc": "workspace:*"
   }
 }
