--- a/subgraphs/blocks/package.json
+++ b/subgraphs/blocks/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "matchstick-as": "0.5.0",
     "assemblyscript": "^0.19.20",
-    "wabt": "1.0.24"
+    "wabt": "1.0.24",
+    "abi": "workspace:*"
   }
 }
