--- a/subgraphs/cauldrons/subgraph.template.yaml
+++ b/subgraphs/cauldrons/subgraph.template.yaml
@@ -59,10 +59,12 @@ templates:
           handler: handleLogAddCollateral
         - event: LogRemoveCollateral(indexed address,indexed address,uint256)
           handler: handleLogRemoveCollateral
+          receipt: true
         - event: LogBorrow(indexed address,indexed address,uint256,uint256)
           handler: handleLogBorrow
         - event: LogRepay(indexed address,indexed address,uint256,uint256)
           handler: handleLogRepay
+          receipt: true
         - event: LogExchangeRate(uint256)
           handler: handleLogExchangeRate
         - event: LogAccrue(uint128)
