--- a/subgraphs/magic-ape/package.json
+++ b/subgraphs/magic-ape/package.json
@@ -18,13 +18,12 @@
     "deploy:studio": "graph deploy --node https://api.studio.thegraph.com/deploy/"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "^0.53.0",
-    "@graphprotocol/graph-ts": "^0.27.0"
+    "@graphprotocol/graph-cli": "0.62.0",
+    "@graphprotocol/graph-ts": "^0.31.0"
   },
   "devDependencies": {
-    "matchstick-as": "0.5.0",
+    "matchstick-as": "0.6.0",
     "assemblyscript": "^0.19.20",
-    "wabt": "1.0.24",
     "abi": "workspace:*",
     "misc": "workspace:*"
   }
